@@ -1,3 +1,7 @@
+2025-05-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/parse.cpp (getArray): Allow for mixed types in array
+
 2025-03-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.3
